Поправил ссылки на главной странице

--- a/backend/template/Index/index.html
+++ b/backend/template/Index/index.html
@@ -13,7 +13,7 @@
 				<div class="col-md-4">
 					<h3>Описание</h3>
 					<p>
-						Фреймворк Bricks Base построен с использованием пакетов <a href="http://bashka.github.io/bricks/">Bricks</a>, а так же клиентских библиотек <a href="http://jquery.com/">JQuery</a> и <a href="http://getbootstrap.com/">Bootstrap</a>. Вы можете заменить эти компоненты на собственные решения, или расширить их на свое усмотрение.
+						Фреймворк Bricks Base построен с использованием пакетов <a href="http://bricks-packages.org/">Bricks</a>, а так же клиентских библиотек <a href="http://jquery.com/">JQuery</a> и <a href="http://getbootstrap.com/">Bootstrap</a>. Вы можете заменить эти компоненты на собственные решения, или расширить их на свое усмотрение.
 					</p>
 				</div>
 				<div class="col-md-4">
@@ -25,7 +25,7 @@
 				<div class="col-md-4">
 					<h3>Сотрудничество</h3>
 					<p>
-						Вы можете помочь проекту дополняя его, или сообщая о найденных багах. Код пакетов <a href="http://bashka.github.io/bricks/docs.html">Bricks</a> и <a href="https://github.com/Bashka/bricks_frameworks_base">данного фреймворка</a> открыт и распространяется под лицензией <a href="http://www.gnu.org/licenses/gpl.html">GNU GPL v3</a>.
+						Вы можете помочь проекту дополняя его, или сообщая о найденных багах. Код пакетов <a href="http://bricks-packages.org/docs/autoload">Bricks</a> и <a href="https://github.com/Bashka/bricks_frameworks_base">данного фреймворка</a> открыт и распространяется под лицензией <a href="http://www.gnu.org/licenses/gpl.html">GNU GPL v3</a>.
 					</p>
 				</div>
 			</div>
