Параметры метода `template` контроллера стали обязательными. Исключил ненужные зависимости из контроллера. Поправил верстку шаблонов страниц 404 и 500. На странице 500 добавил вывод текста ошибки. Поправил баг, требующий использование шаблонов с именами `методAction`. Поправил документацию.

--- a/backend/template/404.html
+++ b/backend/template/404.html
@@ -2,7 +2,9 @@
 
 <div class="wrapper">
 	<div class="container-fluid">
-		Page not found
+		<div class="content">
+			<h2>Page not found</h2>
+		</div>
 	</div>
 </div>
 
