--- a/backend/template/Index/index.html
+++ b/backend/template/Index/index.html
@@ -1,4 +1,4 @@
-<?= $include('header', ['controller' => $controller, 'action' => $action]) ?>
+<?= $include('header', ['controller' => 'Index', 'action' => 'index']) ?>
 
 <div class="wrapper">
 	<div class="container-fluid">
