--- a/backend/template/500.html
+++ b/backend/template/500.html
@@ -2,7 +2,8 @@
 
 <div class="wrapper">
 	<div class="container-fluid">
-		Server error
+		<h2>Server error</h2>
+		<div><?= $exception->getMessage() ?></div>
 	</div>
 </div>
 
